--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 ################################################################################
 
 /c# projects/Paint/.vs/Paint/FileContentIndex/e4c99159-f860-4df4-9fa5-3979c0cc25d7.vsidx
+/c# projects/Paint/.vs/Paint/FileContentIndex/b27dab7d-9457-4b44-a277-a950799c925a.vsidx
+/c# projects/Paint/.vs/Paint/FileContentIndex/74c076de-5b9e-49aa-a59e-c020262f9254.vsidx
+/c# projects/Paint/.vs/Paint/FileContentIndex/433b0923-07db-4e50-b571-c9083f951385.vsidx
+/c# projects/OOPproject/VisualStudio.gitignore
+/c# projects/.vs/OOPproject/FileContentIndex/eb22de71-017e-4e61-b280-1312af600d57.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/d30242e5-661a-4b4e-95ad-0e99723853f3.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/938efa29-6e1b-4f48-ad82-1803cb31a674.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/0d81c44a-f158-4ad7-b45c-4411445f02f5.vsidx
