--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@
 /c# projects/.vs/OOPproject/FileContentIndex/d30242e5-661a-4b4e-95ad-0e99723853f3.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/938efa29-6e1b-4f48-ad82-1803cb31a674.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/0d81c44a-f158-4ad7-b45c-4411445f02f5.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/b94f60f0-dfd3-4aaa-90bd-daad972a2655.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/42a6c1a4-41f1-4843-91a9-27784e6e593c.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/32ae5e51-14ba-4d2f-b795-ee1383211587.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/2e675d4f-ae2c-4e5f-a886-cacc27e25125.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/2e03a93c-5b16-461e-b1a1-0b203f756a55.vsidx
