--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 /c# projects/.vs/OOPproject/FileContentIndex/32ae5e51-14ba-4d2f-b795-ee1383211587.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/2e675d4f-ae2c-4e5f-a886-cacc27e25125.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/2e03a93c-5b16-461e-b1a1-0b203f756a55.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/e5aaf19b-4918-43f8-b309-6e99f2d9fb9c.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/cf821fb5-04a7-4b68-a435-61c6cc722c32.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/b2a66356-3cff-4527-81c6-3aded59c2adf.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/50663a84-49a2-4a74-b69c-b67eea022aa2.vsidx
