--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 /c# projects/.vs/OOPproject/FileContentIndex/cf821fb5-04a7-4b68-a435-61c6cc722c32.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/b2a66356-3cff-4527-81c6-3aded59c2adf.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/50663a84-49a2-4a74-b69c-b67eea022aa2.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/db082d3b-9cc2-4c0b-884c-3080b3b5c330.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/d8742b7a-9302-4e91-be70-4448e015f444.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/671d6d8a-cf59-4836-97e3-8f4f2b574e47.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/2c8e3991-91ae-4b3f-ba39-0e761c441e49.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/dfdc41d6-c0cf-406a-b3df-03c8bdbf62cd.vsidx
