--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@
 /c# projects/.vs/OOPproject/FileContentIndex/671d6d8a-cf59-4836-97e3-8f4f2b574e47.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/2c8e3991-91ae-4b3f-ba39-0e761c441e49.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/dfdc41d6-c0cf-406a-b3df-03c8bdbf62cd.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/b003ab42-da0a-4caa-a065-3f35f7719e1b.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/ab11ab4e-141b-4bc5-98d4-3c53f63d7bc9.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/76ac3578-a91d-4b61-967e-c551c0414cba.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/37fe11a4-cda9-4b3a-80cf-d04ab5f77c54.vsidx
