--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@
 /c# projects/.vs/OOPproject/FileContentIndex/ab11ab4e-141b-4bc5-98d4-3c53f63d7bc9.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/76ac3578-a91d-4b61-967e-c551c0414cba.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/37fe11a4-cda9-4b3a-80cf-d04ab5f77c54.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/dc4e7ef7-709e-49c1-bd46-dc73da6e0ca7.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/863f0824-73ea-4ad1-b9d1-f3cc48044b29.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/432c3c6c-f2d8-4025-bdd3-ccbf6e3e32d2.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/35500ce1-43a0-497d-bfb9-1dd50c854e96.vsidx
