--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@
 /c# projects/.vs/OOPproject/FileContentIndex/863f0824-73ea-4ad1-b9d1-f3cc48044b29.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/432c3c6c-f2d8-4025-bdd3-ccbf6e3e32d2.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/35500ce1-43a0-497d-bfb9-1dd50c854e96.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/be07004e-41fb-484d-86c7-9312434fcac3.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/7f3f8fda-3060-4901-80ab-911c6d15cf9a.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/5eab08fa-b542-49b6-a352-f35560ef1cba.vsidx
+/c# projects/.vs/OOPproject/FileContentIndex/5a68305d-42a3-451d-906e-3f3cd407ea31.vsidx
