added log file and fix issue with pencil on top left of screen

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /c# projects/.vs/OOPproject/FileContentIndex/7f3f8fda-3060-4901-80ab-911c6d15cf9a.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/5eab08fa-b542-49b6-a352-f35560ef1cba.vsidx
 /c# projects/.vs/OOPproject/FileContentIndex/5a68305d-42a3-451d-906e-3f3cd407ea31.vsidx
+/c# projects/OOPproject/bin133067066093926870_log
+/c# projects/OOPproject/bin133067069005080849_log
