fix move phase 1 (out of 2 i guess)

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /c# projects/.vs/OOPproject/FileContentIndex/5a68305d-42a3-451d-906e-3f3cd407ea31.vsidx
 /c# projects/OOPproject/bin133067066093926870_log
 /c# projects/OOPproject/bin133067069005080849_log
+*.log
